syntax = "proto3";
package groupSdk;

option go_package = "../protoc";

message TemplateData {
    string msg = 1;
}

message TemplateResult {
    bool Success = 1;
}

service TemplateService {
    rpc Test(TemplateData) returns (TemplateResult) {}
}
